deploy/manifests/traefik/Middleware-rate-limit-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-middleware
  namespace: microservices
spec:
  rateLimit:
    average: 100
    burst: 50
