deploy/manifests/traefik/Middleware-retry-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: retry-middleware
  namespace: microservices
spec:
  retry:
    attempts: 3
    initialInterval: 100ms
