deploy/manifests/traefik/IngressRoute-auth-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-route
  namespace: microservices
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/auth`)
      middlewares:
        - name: cors-middleware
        - name: rate-limit-middleware
      priority: 90
      services:
        - name: auth-service
          port: 8090
