deploy/manifests/traefik/IngressRoute-item-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: item-route
  namespace: microservices
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/item.v1.ItemService`)
      middlewares:
        - name: cors-middleware
        - name: rate-limit-middleware
        - name: retry-middleware
      priority: 100
      services:
        - name: item-service
          port: 8080
          scheme: h2c
